--- a/src/components/Section.scss
+++ b/src/components/Section.scss
@@ -46,9 +46,9 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1600px;
     position: relative;
-    padding: 0; /* Asegura que no haya padding adicional que desplace el contenido */
+    padding: 0; 
     height: 100%; /* Asegura que el contenido ocupe todo el alto de la sección */
 
     .section-image {
@@ -90,9 +90,26 @@
 
     .section-code {
       flex: 1;
-      font-family: 'Courier New', monospace;
+      font-family: 'Poppins', sans-serif; 
       color: white;
       overflow-x: auto;
+      text-align: left; /* Alinea el texto a la izquierda */
+      
+      .section-title {
+        font-size: 2.8rem; /* Ajustamos el tamaño del título */
+        font-weight: bold;
+        line-height: 1.4; /* Mantiene el espaciado entre líneas del título */
+        margin-bottom: 55px; /* Ajustamos el margen debajo del título */
+        margin-top: 100px;
+     
+      }
+
+      .section-text {
+        font-size: 1.8rem; /* Reducimos el tamaño del texto */
+        line-height: 1.6; /* Aumentamos un poco el espaciado entre líneas */
+        margin-bottom: 18px; /* Ajustamos el margen entre puntos */
+        margin-left: 80px;
+      }
 
       pre {
         margin-top: 60px;
