--- a/src/components/Features.scss
+++ b/src/components/Features.scss
@@ -1,7 +1,7 @@
 
 
 .gradient2 {
-    background: linear-gradient(to bottom, #3f4ae0, #000000);
+    background: linear-gradient(to bottom, 	#340468, #000000);
     position: relative;
     display: flex; /* Flexbox para alinear imagen y texto */
     align-items: center;
